# vemorak-sdks

./: README.md
.github/workflows/: mirror-code.yml
javascript/memory-helpers/: package.json
javascript/memory-helpers/src/: client.ts  index.ts  types.ts
javascript/sdk/: package.json  tsconfig.json
javascript/sdk/src/: client.ts  errors.ts  extract.ts  http.ts  ids.ts  index.ts  make.ts  types.ts  validate.ts
python/: README.md  pyproject.toml
python/src/vemorak_sdk/: __init__.py  client.py  errors.py  types.py  validate.py
