[project]
name = "vemorak-sdk"
version = "0.1.0"
description = "Strict Python SDK for the Verifiable Memory Protocol (VMP)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0"
]

[build-system]
requires = ["hatchling>=1.22.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vemorak_sdk"]
